--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --hot --inline --progress --port 9000"
   },
   "repository": {
     "type": "git",
@@ -18,13 +19,19 @@
   "homepage": "https://github.com/syxov/react#readme",
   "dependencies": {
     "react": "16.3.2",
+    "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "react-router": "4.2.0",
     "redux": "3.7.2"
   },
   "devDependencies": {
     "babel": "6.23.0",
+    "babel-loader": "7.1.4",
+    "babel-plugin-transform-react-jsx": "6.24.1",
+    "babel-preset-env": "1.6.1",
     "eslint": "4.19.1",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
     "jest": "22.4.3",
     "webpack": "4.5.0",
     "webpack-cli": "2.0.14",
