Add more scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --hot --inline --progress --port 9000"
+    "start": "webpack-dev-server --hot --inline --progress --port 9000 --mode development",
+    "build": "webpack -p"
   },
   "repository": {
     "type": "git",
