--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack-dev-server --hot --inline --progress --port 9000 --mode development",
-    "build": "webpack -p"
+    "build": "webpack -p --mode production"
   },
   "repository": {
     "type": "git",
@@ -37,5 +37,8 @@
     "webpack": "4.5.0",
     "webpack-cli": "2.0.14",
     "webpack-dev-server": "3.1.3"
+  },
+  "jest": {
+    "modulePaths": ["src"]
   }
 }
