--- a/package.json
+++ b/package.json
@@ -23,22 +23,29 @@
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "react-router": "4.2.0",
-    "redux": "3.7.2"
+    "redux": "4.0.0"
   },
   "devDependencies": {
     "babel": "6.23.0",
     "babel-loader": "7.1.4",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-preset-env": "1.6.1",
+    "css-loader": "0.28.11",
     "eslint": "4.19.1",
+    "file-loader": "1.1.11",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "jest": "22.4.3",
-    "webpack": "4.5.0",
-    "webpack-cli": "2.0.14",
-    "webpack-dev-server": "3.1.3"
+    "less": "3.0.2",
+    "less-loader": "4.1.0",
+    "style-loader": "0.21.0",
+    "webpack": "4.7.0",
+    "webpack-cli": "2.1.2",
+    "webpack-dev-server": "3.1.4"
   },
   "jest": {
-    "modulePaths": ["src"]
+    "modulePaths": [
+      "src"
+    ]
   }
 }
