--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "devDependencies": {
     "babel": "6.23.0",
     "babel-loader": "7.1.4",
+    "babel-plugin-transform-decorators": "6.24.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-preset-env": "1.6.1",
     "css-loader": "0.28.11",
@@ -38,6 +40,7 @@
     "jest": "22.4.3",
     "less": "3.0.2",
     "less-loader": "4.1.0",
+    "redux-thunk": "2.2.0",
     "style-loader": "0.21.0",
     "webpack": "4.7.0",
     "webpack-cli": "2.1.2",
