--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest": "22.4.3",
     "less": "3.0.2",
     "less-loader": "4.1.0",
+    "redux-persist": "5.9.1",
     "redux-thunk": "2.2.0",
     "style-loader": "0.21.0",
     "webpack": "4.7.0",
