--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
   },
   "devDependencies": {
     "babel": "6.23.0",
+    "babel-jest": "22.4.4",
     "babel-loader": "7.1.4",
     "babel-plugin-transform-decorators": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
     "css-loader": "0.28.11",
     "eslint": "4.19.1",
     "file-loader": "1.1.11",
@@ -40,6 +42,7 @@
     "jest": "22.4.3",
     "less": "3.0.2",
     "less-loader": "4.1.0",
+    "react-test-renderer": "16.3.2",
     "redux-persist": "5.9.1",
     "redux-thunk": "2.2.0",
     "style-loader": "0.21.0",
@@ -50,6 +53,9 @@
   "jest": {
     "modulePaths": [
       "src"
-    ]
+    ],
+    "transform": {
+      "^.+\\.(css|less)$": "./jest/styleMock.js"
+    }
   }
 }
