update babel config

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,16 @@
 {
-  "presets": ["env", "react"],
-  "plugins": ["transform-react-jsx", "transform-decorators-legacy"]
+  "presets":  [["es2015", { "modules": false }], "react"],
+  "env": {
+    "test": {
+      "presets":[
+        "es2015",
+        "stage-0",
+        "react"
+      ],
+      "plugins": [
+        "transform-es2015-modules-commonjs",
+        "dynamic-import-node"
+      ]
+    }
+  }
 }
