--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "babel": "6.23.0",
     "babel-jest": "22.4.4",
     "babel-loader": "7.1.4",
+    "babel-plugin-dynamic-import-node": "1.2.0",
     "babel-plugin-transform-decorators": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.26.2",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
