--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,4 @@
 {
-  "presets":  [["es2015", { "modules": false }], "react"],
-  "env": {
-    "test": {
-      "presets":[
-        "es2015",
-        "stage-0",
-        "react"
-      ],
-      "plugins": [
-        "transform-es2015-modules-commonjs",
-        "dynamic-import-node"
-      ]
-    }
-  }
+  "presets": ["env"],
+  "plugins": ["transform-react-jsx", "transform-decorators-legacy"]
 }
