--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["env"],
-  "plugins": ["transform-react-jsx", "transform-decorators-legacy"]
+  "plugins": ["transform-react-jsx", "transform-decorators-legacy", "transform-object-rest-spread"]
 }
