--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "react-redux": "5.0.7",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
-    "redux": "4.0.0"
+    "redux": "4.0.0",
+    "redux-persist": "5.9.1",
+    "redux-thunk": "2.2.0"
   },
   "devDependencies": {
     "babel": "6.23.0",
+    "babel-eslint": "8.2.3",
     "babel-jest": "22.4.4",
     "babel-loader": "7.1.4",
     "babel-plugin-dynamic-import-node": "1.2.0",
@@ -37,9 +40,15 @@
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-preset-env": "1.6.1",
+    "babel-preset-flow": "6.23.0",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.11",
-    "eslint": "4.19.1",
+    "eslint": "4.9.0",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-loader": "2.0.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
     "file-loader": "1.1.11",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
@@ -47,8 +56,6 @@
     "less": "3.0.2",
     "less-loader": "4.1.0",
     "react-test-renderer": "16.3.2",
-    "redux-persist": "5.9.1",
-    "redux-thunk": "2.2.0",
     "style-loader": "0.21.0",
     "webpack": "4.7.0",
     "webpack-cli": "2.1.2",
@@ -59,7 +66,7 @@
       "src"
     ],
     "transform": {
-      "^.+\\.(css|less)$": "./jest/styleMock.js"
+      ".+\\.(css|less)$": "./jest/styleMock.js"
     }
   }
 }
