--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "start": "webpack-dev-server --hot --inline --progress --port 9000 --mode development",
-    "build": "webpack -p --mode production"
+    "build": "webpack -p --mode production",
+    "flow": "flow"
   },
   "repository": {
     "type": "git",
