--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "4.2.2",
     "redux": "4.0.0",
     "redux-persist": "5.9.1",
-    "redux-thunk": "2.2.0"
+    "redux-thunk": "2.2.0",
+    "react-jss": "8.5.1"
   },
   "devDependencies": {
     "babel": "6.23.0",
@@ -38,11 +39,14 @@
     "babel-plugin-transform-decorators": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "6.26.2",
+    "babel-plugin-transform-es3-member-expression-literals": "6.22.0",
+    "babel-plugin-transform-es3-property-literals": "6.22.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
     "babel-preset-env": "1.6.1",
     "babel-preset-flow": "6.23.0",
     "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
     "css-loader": "0.28.11",
     "eslint": "4.9.0",
     "eslint-config-airbnb": "16.1.0",
@@ -54,6 +58,8 @@
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "jest": "22.4.3",
+    "jss": "9.8.3",
+    "jss-preset-default": "4.5.0",
     "less": "3.0.2",
     "less-loader": "4.1.0",
     "react-test-renderer": "16.3.2",
