--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "webpack-dev-server --hot --inline --progress --port 9000 --mode development",
+    "serve": "webpack -d && babel-node ./backend/index.js",
     "build": "webpack -p --mode production",
     "flow": "flow"
   },
@@ -20,18 +21,21 @@
   },
   "homepage": "https://github.com/syxov/react#readme",
   "dependencies": {
+    "express": "4.16.3",
+    "isomorphic-fetch": "2.2.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
+    "react-jss": "8.5.1",
     "react-redux": "5.0.7",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "redux": "4.0.0",
     "redux-persist": "5.9.1",
-    "redux-thunk": "2.2.0",
-    "react-jss": "8.5.1"
+    "redux-thunk": "2.2.0"
   },
   "devDependencies": {
     "babel": "6.23.0",
+    "babel-cli": "6.26.0",
     "babel-eslint": "8.2.3",
     "babel-jest": "22.4.4",
     "babel-loader": "7.1.4",
@@ -43,6 +47,7 @@
     "babel-plugin-transform-es3-property-literals": "6.22.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-react-jsx": "6.24.1",
+    "babel-plugin-transform-require-ignore": "0.1.1",
     "babel-preset-env": "1.6.1",
     "babel-preset-flow": "6.23.0",
     "babel-preset-react": "6.24.1",
