--- a/.babelrc
+++ b/.babelrc
@@ -5,12 +5,6 @@
     "transform-decorators-legacy",
     "transform-object-rest-spread",
     "transform-es3-member-expression-literals",
-    "transform-es3-property-literals",
-    [
-      "babel-plugin-transform-require-ignore",
-      {
-        "extensions": [".less"]
-      }
-    ]
+    "transform-es3-property-literals"
   ]
 }
